Remove greedy minimization blurb

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <hr />
         <h2>Suggested settle-up</h2>
         <div id="settlements"></div>
-        <p class="muted small">Greedy minimization across creditors/debtors. Click <strong>Use</strong> to prefill the dialog, or <strong>Pay</strong> to post the exact settlement now.</p>
+        <p class="muted small">Click <strong>Use</strong> to prefill the dialog, or <strong>Pay</strong> to post the exact settlement now.</p>
       </div>
     </div>
   </div>
