Add group sidebar and navigation

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     <h1>Splitty <span class="pill"><span>Cloud Sync</span></span></h1>
 
     <div class="grid">
+      <aside id="groupNav" class="card">
+        <h2>Groups</h2>
+        <ul id="groupList"></ul>
+        <button id="newGroup" class="btn-accent">New group</button>
+      </aside>
+
       <!-- LEFT: People + Add Expense + Expenses -->
       <div class="card">
         <h2>
