--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
           </span>
         </h2>
 
+        <div id="groupBar" class="flex" style="gap:8px; margin:8px 0; align-items:center;">
+          <div id="groupList" class="flex" style="gap:6px; flex:1;"></div>
+          <button class="btn-ghost" id="newGroupBtn" type="button">New group</button>
+        </div>
+
         <div class="row">
           <div class="col-6"><label>Name</label><input id="personName" placeholder="e.g. Alex" autocomplete="off" /></div>
           <div class="col-3"><label>&nbsp;</label><button class="btn-accent" id="addPerson">Add person</button></div>
