Simplify UI and improve mobile layout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="grid">
       <!-- LEFT: People + Add Expense + Expenses -->
-      <div class="card">
+      <div class="card main-card">
         <h2>
           People
           <span id="saveStatus"
@@ -133,7 +133,7 @@
       </div>
 
       <!-- RIGHT: Balances + Settle Up -->
-      <div class="card">
+      <div class="card balances-card">
         <h2>Balances</h2>
         <div id="balances"></div>
         <p class="muted small">Paid/Owes include expenses + settlements. Net = Paid &minus; Owes.</p>
