Track settled in/out separately in balances

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="card balances-card">
         <h2>Balances</h2>
         <div id="balances"></div>
-        <p class="muted small">Paid/Owes include expenses. Settled reflects repayments. Net = Paid &minus; Owes + Settled.</p>
+        <p class="muted small">Paid/Owes include expenses. Settled (out/in) reflect repayments. Net = Paid &minus; Owes + (Settled out &minus; Settled in).</p>
         <hr />
         <details id="settleSection">
           <summary>Suggested settle-up</summary>
