refactor expenses list ui

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="scroll-expenses">
           <table id="expensesTable">
             <colgroup>
-              <col><col><col><col>
+              <col><col><col>
               <col style="width:10%">
               <col class="split-rule">
               <col class="split-amts">
@@ -109,11 +109,10 @@
               <tr>
                 <th>Date</th>
                 <th>Description</th>
-                <th class="mono">Payer</th>
-                <th class="mono">Participants</th>
-                <th>Amount</th>
-                <th class="mono split-rule">Split rule</th>
-                <th class="mono split-amts">Split amounts</th>
+                <th>People</th>
+                <th class="right">Amount</th>
+                <th class="split-rule">Split rule</th>
+                <th class="split-amts">Split amounts</th>
                 <th></th>
               </tr>
             </thead>
