--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 </script>
 
 <link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="/expenses.css">
 
 <script defer src="/balances.js"></script>
 <!-- Load app.js ONCE -->
 <script defer src="/app.js"></script>
+<script defer src="/expenses.js"></script>
   
 </head>
 <body>
