--- a/index.html
+++ b/index.html
@@ -98,29 +98,7 @@
 
         <details id="expensesSection">
           <summary>Expenses</summary>
-          <div class="scroll-expenses">
-          <table id="expensesTable">
-            <colgroup>
-              <col><col><col>
-              <col style="width:10%">
-              <col class="split-rule">
-              <col class="split-amts">
-              <col style="width:76px">
-            </colgroup>
-            <thead>
-              <tr>
-                <th>Date</th>
-                <th>Description</th>
-                <th>People</th>
-                <th class="right">Amount</th>
-                <th class="split-rule">Split rule</th>
-                <th class="split-amts">Split amounts</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-          </div>
+          <div class="scroll-expenses" id="expensesContainer"></div>
         </details>
       </div>
 
